@@ -35,7 +35,8 @@ build_triplet = @build@
 host_triplet = @host@
 calibration_PROGRAMS = calibrate$(EXEEXT) calibration_helper$(EXEEXT)
 subdir = base/arch/x86_64/calibration
-DIST_COMMON = README $(srcdir)/GNUmakefile.am $(srcdir)/GNUmakefile.in
+DIST_COMMON = README $(srcdir)/GNUmakefile.am $(srcdir)/GNUmakefile.in \
+	$(srcdir)/setsmi.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/base/config/autoconf/acinclude.m4 \
 	$(top_srcdir)/base/config/autoconf/docbook.m4 \
@@ -45,7 +46,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 mkinstalldirs = $(SHELL) \
 	$(top_srcdir)/base/config/autoconf/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/rtai_config.h
-CONFIG_CLEAN_FILES =
+CONFIG_CLEAN_FILES = setsmi
 LIBRARIES = $(noinst_LIBRARIES)
 ARFLAGS = cru
 libcalibrate_rt_a_LIBADD =
@@ -321,6 +322,8 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
+setsmi: $(top_builddir)/config.status $(srcdir)/setsmi.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 
 clean-noinstLIBRARIES:
 	-test -z "$(noinst_LIBRARIES)" || rm -f $(noinst_LIBRARIES)
